src/test/deca/context/invalid/created/Objet/ProtectedSelectionExtends.deca
// Description:
// Test d'accès à un attribut protégé via un extends (condition 2 Sélection)
// Resultats:
// ProtectedSelectionExtends.deca:13:20: Error: Unauthorized access to the protected field 'x'

class A {
    protected int x;
}

class X {
    void m(){
        A newA = new A();
        println(newA.x);
    }
}

class B extends A {
    int getX(A a) {
        return a.x;
    }
}


